Agregar Servicios de repositorio y aplicacion. Agregar Dependency injection

--- a/Solution/Project.Application/Project.Application.csproj
+++ b/Solution/Project.Application/Project.Application.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
-    <Folder Include="ViewModels\" />
+    <ProjectReference Include="..\Project.Domain\Project.Domain.csproj" />
   </ItemGroup>
 
 </Project>
