--- a/Solution/Project.Mvc/Project.Mvc.csproj
+++ b/Solution/Project.Mvc/Project.Mvc.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Project.Infra.Data\Project.Infra.Data.csproj" />
+    <ProjectReference Include="..\Project.Infra.IoC\Project.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
