--- a/Solution/Project.Mvc/Project.Mvc.csproj
+++ b/Solution/Project.Mvc/Project.Mvc.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Project.Infra.IoC\Project.Infra.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
