--- a/Solution/Project.Domain/Project.Domain.csproj
+++ b/Solution/Project.Domain/Project.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project.Domain.Core\Project.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
